src/test/deca/syntax/invalid/sansObjet/invalidLvalue.deca
/* Description:
    tests de programme incorrect lexicalement

 Resultats:


 Historique:
    cree le 10/01/2020
*/

{
  int x;
  x + x = 10;
}
